--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <title>Reshma's website</title>
-    <meta http-equiv="refresh" content="2; URL=https://github.com/rreshmark/FullStack_Course/blob/master/module2-solution/">
+    <meta http-equiv="refresh" content="2; URL=https:\\github.com\rreshmark\rreshmark.github.io\">
     <meta name="keywords" content="automatic redirection">
     </head>
     <body>
